# basictradingsoftware

./: .gitignore  ADDITIONAL_CLEANUP_OPPORTUNITIES.md  ADVANCED_ORDER_ENTRY_IMPLEMENTATION.md  AGENTS.md  CLEANUP_IMPLEMENTATION_COMPLETE.md  CLEANUP_IMPLEMENTATION_SUMMARY.txt  CLEANUP_QUICK_REFERENCE.md  CLEANUP_ROADMAP.txt  CODEBASE_AUDIT_REPORT.md  CODEBASE_CLEANUP_COMPLETE.md  CODEBASE_CLEANUP_SUMMARY.txt  CODING_STANDARDS_AND_BEST_PRACTICES.md  COMMIT_READY_SUMMARY.md  COMPREHENSIVE_SYSTEM_AUDIT.md  CUSTOMIZABLE_DASHBOARD.md  CUSTOMIZABLE_DASHBOARD_COMMIT.md  DASHBOARD_ENHANCEMENTS_SUMMARY.md  DATA_VISUALIZATION_PLAN.md  DEVELOPMENT_GUIDELINES_SUMMARY.txt  EMPTY_STATES_PLAN.md  FINAL_COMMIT_STATUS.md  FINAL_SUMMARY.txt  GITHUB_COMMIT_GUIDE.md  GITHUB_PUSH_INSTRUCTIONS.md  MONOREPO_SETUP.md  MULTI_VIEW_NAVIGATION_SUMMARY.md  NEXT_FEATURES_SUMMARY.md  NEXT_STEPS.md  OE1_COMPLETION_REPORT.txt  OE4_COMPLETION_REPORT.txt  ONBOARDING_HELP_IMPLEMENTATION.md  ONBOARDING_SUMMARY.txt  ORDER_EXECUTION_ML_SIGNALS_PLAN.md  PENDING_TODOS_NEXT_SESSION.md  PHASES_COMPLETE.txt  PHASE_OE1_SUMMARY.md  PHASE_OE4_INTEGRATION_SUMMARY.md  PHASE_OE_FINAL_SUMMARY.md  PROJECT_CHECKLIST.md  QUICK_TRADE_QUICK_REFERENCE.md  (+16 more)
backend/: README.md  pyproject.toml  requirements.txt
backend/src/api/: __init__.py  main.py
frontend/: README.md  index.html  package.json  vite.config.ts
frontend/electron/: main.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: CandlestickChart.tsx  ColorPicker.tsx  CurrentWidgetsDisplay.tsx  Dashboard.tsx  LayoutBuilder.tsx  LayoutSwitcher.tsx  Navbar.tsx  OrdersPanel.tsx  PortfolioCard.tsx  PriceChart.tsx  SettingsDialog.tsx  Sidebar.tsx  SignalsPanel.tsx  StatsWidget.tsx  ThemeCustomizer.tsx  WidgetManager.tsx
frontend/src/constants/: mockData.ts  options.ts
frontend/src/hooks/: useQuickTrade.ts  useSwipeNavigation.ts  useTemporaryMessage.ts
src/basic_trading_software/: __init__.py  __main__.py  app.py
(+89 files in other folders)
